--- a/.github/workflows/fetch-plugin-and-commit.yml
+++ b/.github/workflows/fetch-plugin-and-commit.yml
@@ -6,6 +6,8 @@ on:
         description: Plugin release tag.
         required: false
         default: 'next'
+env:
+  GITHUB_TOKEN: ${{ secrets.GHP_TOKEN }}
 jobs:
   Fetch-Plugin-And-Commit:
     name: Fetch Plugin & Commit
