--- a/.github/workflows/publish-pre-release.yml
+++ b/.github/workflows/publish-pre-release.yml
@@ -6,6 +6,7 @@ on:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+-*'
 env:
+  GITHUB_TOKEN: ${{ secrets.GHP_TOKEN }}
   ITCH_IO_STAGING_URI: /repos/agogpixel/itch-io-staging/actions/workflows/fetch-pgmmv-plugin-artifacts-and-commit.yml/dispatches
   ITCH_IO_STAGING_INPUT: '{"ref":"main","inputs":{"payload":"{\"tag\":\"${{ github.ref_name }}\",\"name\":\"pgmmv-extended-show-choices-plugin\"}"}}'
 jobs:
