--- a/demos/extended-show-choices-plugin-demo/data/project.json
+++ b/demos/extended-show-choices-plugin-demo/data/project.json
@@ -183,7 +183,8 @@
 		{"id":1,"name":"font6x10","filename":"img/001.png","srcFilename":"","horzDivCount":1,"vertDivCount":1,			"folder": false},
 		{"id":2,"name":"font8x8","filename":"img/002.png","srcFilename":"","horzDivCount":1,"vertDivCount":1,			"folder": false},
 		{"id":3,"name":"font12x12","filename":"img/003.png","srcFilename":"","horzDivCount":1,"vertDivCount":1,			"folder": false},
-		{"id":4,"name":"blank16x16","filename":"img/004.png","srcFilename":"D:/agogpixel/pgmmv-extended-show-choices-plugin-demo/assets/blank16x16.png","horzDivCount":1,"vertDivCount":1,			"folder": false}
+		{"id":4,"name":"blank16x16","filename":"img/004.png","srcFilename":"D:/agogpixel/pgmmv-extended-show-choices-plugin-demo/assets/blank16x16.png","horzDivCount":1,"vertDivCount":1,			"folder": false},
+		{"id":5,"name":"glassPanel_projection","filename":"img/005.png","srcFilename":"D:/agogpixel/pgmmv-extended-show-choices-plugin-demo/assets/glassPanel_projection.png","horzDivCount":1,"vertDivCount":1,			"folder": false}
 	],
 	"fontList": [
 				{
@@ -201,6 +202,23 @@
 			"zenkakuWidth": 1,
 			"letterLayout": "ABCDEFGHIJKLMNOPQRSTUVWXYZ\nabcdefghijklmnopqrstuvwxyz\n!\"#$%&'[]*+,-./{|}`･@~ \n0123456789:;<=>?｢｣^_\n『』【】()≪≫→←↑↓～゛゜､｡",
 			"localeSettings": { "en_US": { "imageFontFlag": true, "imageId": 1, "fontName": "mplus-1m-regular", "ttfName": "M+ 1m", "fontSize": 10, "antialiasDisabled": false, "aliasThreshold": 126, "fixedWidth": true, "hankakuWidth": 1, "zenkakuWidth": 1, "letterLayout": "ABCDEFGHIJKLMNOPQRSTUVWXYZ\nabcdefghijklmnopqrstuvwxyz\n!\"#$%&'[]*+,-./{|}`･@~ \n0123456789:;<=>?｢｣^_\n『』【】()≪≫→←↑↓～゛゜､｡" } },
+			"folder": false
+		},
+				{
+			"id": 4,
+			"name": "Kenney Future",
+			"imageFontFlag": false,
+			"imageId": -1,
+			"fontName": "Kenney Future",
+			"ttfName": "Kenney Future",
+			"fontSize": 10,
+			"antialiasDisabled": false,
+			"aliasThreshold": 126,
+			"fixedWidth": true,
+			"hankakuWidth": 10,
+			"zenkakuWidth": 10,
+			"letterLayout": "",
+			"localeSettings": { "en_US": { "imageFontFlag": false, "imageId": -1, "fontName": "Kenney Future", "ttfName": "Kenney Future", "fontSize": 10, "antialiasDisabled": false, "aliasThreshold": 126, "fixedWidth": true, "hankakuWidth": 10, "zenkakuWidth": 10, "letterLayout": "" } },
 			"folder": false
 		},
 				{
@@ -1299,6 +1317,679 @@
 					"priorityInPhysics": 0
 ,
 			"folder": false
+		},
+				{
+			"id": 2,
+			"name": "test002",
+			"type": 0,
+			"group": 0,
+			"animationId": 1,
+			"operatable": false,
+			"priority": 0,
+			"initialActionId": 1,
+			"initialDisplayDirectionFlag": false,
+			"initialDisplayDirection": 180.000000,
+			"hitPlayerGroup": false,
+			"hitEnemyGroup": false,
+			"hitObjectGroupBit": 0,
+			"collideWithPlayerGroup": false,
+			"collideWithEnemyGroup": false,
+			"collideWithObjectGroupBit": 0,
+			"collideWithTile": false,
+			"collideWithTileGroupBit": 0,
+			"dispPriority": 0,
+			"actionList": [ {
+	"id": 1,
+	"name": "Actions001",
+	"a": 255,
+	"r": 166,
+	"g": 166,
+	"b": 166,
+	"animMotionId": 1,
+	"animDirectionId": -1,
+	"takeOverMotion": false,
+	"jumpable": false,
+	"enableCustomizedJump": false,
+	"ignoreMoveInput": false,
+	"keepDirection": false,
+	"ignoreGravity": false,
+	"gravity": 100,
+	"reflectGravityToDisplayDirection": false,
+	"moveSpeed": 100,
+	"upDownMoveSpeed": 100,
+	"jumpSpeed": 100,
+	"turnSpeed": 100,
+	"objCommandList": [ {
+	"id": 1,
+	"commandType": 1200,
+	"ignored": false,
+	"instanceConfigurable": false,
+	"custom": {
+	"customId": 1,
+	"valueJson": "[\n    {\n        \"id\": 101,\n        \"value\": 7\n    },\n    {\n        \"id\": 102,\n        \"value\": 8\n    },\n    {\n        \"id\": 5,\n        \"value\": \"\"\n    },\n    {\n        \"id\": 103,\n        \"value\": 9\n    },\n    {\n        \"id\": 1,\n        \"value\": 2\n    },\n    {\n        \"id\": 2,\n        \"value\": 5\n    },\n    {\n        \"id\": 6,\n        \"value\": 4\n    }\n]\n"
+}
+} ],
+	"memo": "",
+	"x": -72,
+	"y": -24,
+	"width": 168,
+	"height": 48,
+	"shortcutList": []
+} ],
+			"actionLinkList": [  ],
+			"actionGroupList": [  ],
+			"memo": "",
+			"testplayOnly": false,
+			"appearCondition": 1,
+			"appearConditionTileCount": 0,
+			"reappearCondition": 1,
+			"reappearConditionTileCount": 0,
+			"hp": 1,
+			"maxHp": 1,
+			"minAttack": 1,
+			"maxAttack": 1,
+			"initialDamageRate": 100,
+			"damageVariationValue": 0,
+			"critical": true,
+			"criticalRatio": 200,
+			"criticalIncidence": 5,
+			"moveType": 0,
+			"normalAccelMove": false,
+			"tankAccelMove": false,
+			"carAccelMove": false,
+			"upMoveKeyId": -1,
+			"downMoveKeyId": -1,
+			"leftMoveKeyId": -1,
+			"rightMoveKeyId": -1,
+			"forwardMoveKeyId": -1,
+			"backwardMoveKeyId": -1,
+			"leftTurnKeyId": -1,
+			"rightTurnKeyId": -1,
+			"slipOnSlope": false,
+			"diagonalMoveWithPolar": false,
+			"moveAroundWithinDots": false,
+			"dotsToMoveAround": 0,
+			"horizontalMove": 1.000000,
+			"verticalMove": 1.000000,
+			"horizontalAccel": 1.000000,
+			"horizontalMaxMove": 1.000000,
+			"horizontalDecel": 1.000000,
+			"verticalAccel": 1.000000,
+			"verticalMaxMove": 1.000000,
+			"verticalDecel": 1.000000,
+			"forwardMove": 1.000000,
+			"backwardMove": 1.000000,
+			"forwardAccel": 1.000000,
+			"forwardMaxMove": 1.000000,
+			"forwardDecel": 1.000000,
+			"backwardAccel": 1.000000,
+			"backwardMaxMove": 1.000000,
+			"backwardDecel": 1.000000,
+			"leftTurn": 1.000000,
+			"rightTurn": 1.000000,
+			"jumpInitialSpeed": 1.000000,
+			"gravity": 1.000000,
+			"movableWhenJumping": true,
+			"movableWhenFalling": true,
+			"fallOnCollideWithWall": true,
+			"fallOnCollideWithHitbox": true,
+			"jumpInputOperationKeyId": -1,
+			"affectInputDuration300": 0,
+			"limitFalldownAmount": true,
+			"maxFalldownAmount": 16.000000,
+			"invincibleOnDamaged": true,
+			"invincibleDuration300": 300,
+			"winkWhenInvincible": true,
+			"winkInterval300": 300,
+			"afterimage": false,
+			"afterimageCount": 0,
+			"afterimageInterval": 0.000000,
+			"afterimageDuration300": 0,
+			"fillAfterimage": false,
+			"fillAfterimageA": 255,
+			"fillAfterimageR": 128,
+			"fillAfterimageG": 0,
+			"fillAfterimageB": 255,
+			"fadeoutAfterimage": false,
+			"fadeoutAfterimageStart300": 0,
+			"useAnimationAfterimage": false,
+			"afterimageAnimationId": -1,
+			"followType": 1,
+			"followPrecision": 100,
+			"followIntervalByTime300": 0,
+			"followIntervalByLocusLength": 0,
+			"childDamageType": 1,
+			"takeOverDamageRateToParent": false,
+			"unattackableToParent": true,
+			"takeoverDispDirection": true,
+			"takeoverAngle": true,
+			"takeoverScaling": true,
+			"takeoverIntensity": true,
+			"disappearWhenHp0": false,
+			"disappearWhenOutOfCamera": false,
+			"disappearCameraMarginTileCount": 2,
+			"fixedInCamera": false,
+			"pushedbackByObject": true,
+			"takeoverStatesAtSceneEnd": false,
+			"disappearSettingFlag": false,
+			"disappearSetting": {
+	"otherObjectDecrementHp": true,
+	"decrement": 0,
+	"targetObjectType": 1,
+	"targetObjectTypeByType": 0,
+	"targetObjectGroup": -1,
+	"targetObjectId": -3,
+	"damageRange": 0,
+	"cameraRangeAdjust": 0,
+	"objCommandList": [  ]
+},
+			"fireBulletSettingFlag": false,
+			"additionalDisplayList": [  ],
+			"fireBulletSettingList": [  ],
+			"effectSettingFlag": false,
+			"effectSettingList": [  ],
+			"connectSettingFlag": false,
+			"connectSettingList": [  ],
+			"moveDispDirectionSettingFlag": false,
+			"moveDispDirectionSetting": {
+	"upOperationKeyId": -1,
+	"downOperationKeyId": -1,
+	"leftOperationKeyId": -1,
+	"rightOperationKeyId": -1,
+	"actionInfoList": [  ]
+},
+			"physicsSettingFlag": false,
+			"physicsSetting": {
+	"affectPhysics": false,
+	"physicsAffected": false,
+	"followConnectedPhysics": false,
+	"templateId": -1,
+	"density": 1000,
+	"mass": 1,
+	"friction": 1,
+	"repulsion": 0.5,
+	"nonCollisionGroup": [  ]
+},
+			"viewportLightSettingFlag": false,
+			"viewportLightSettingList": [  ],
+			"commonActionSettingFlag": false,
+			"commonActionSettingList": [  ],
+			"commonActionGroup": {
+	"id": 99999999,
+	"name": "Common Actions",
+	"a": 255,
+	"r": 255,
+	"g": 255,
+	"b": 0,
+	"actionIdList": [  ],
+	"x": 0,
+	"y": 0,
+	"width": 64,
+	"height": 64,
+	"collapsed": false
+},
+			"aroundCharacterViewSettingFlag": false,
+			"aroundCharacterViewSetting": {
+	"tileOn": true,
+	"objectOn": true,
+	"viewType": 0,
+	"multiplyFill": true,
+	"fillA": 255,
+	"fillR": 255,
+	"fillG": 255,
+	"fillB": 255,
+	"transparency": 0,
+	"width": 0,
+	"height": 0
+},
+			"invincibleSettingFlag": false,
+			"invincibleSettingList": [  ],
+			"damagedSettingFlag": false,
+			"damagedSettingList": [  ],
+			"moveRestrictionSettingFlag": false,
+			"moveRestrictionSettingList": [  ],
+					"variableList": [
+					{
+    "folder": false,
+    "id": 1,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Object ID",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 2,
+    "initialValue": 0,
+    "memo": "",
+    "name": "HP",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 3,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Max HP",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 4,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Min Attack",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 5,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Max attack",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 15,
+    "initialValue": 100,
+    "memo": "",
+    "name": "Critical Boost (%)",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 16,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Critical Rate (%)",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 6,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Received Damage Rate",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 36,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Damage Spread",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 7,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Attack Attribute",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 8,
+    "initialValue": -1,
+    "memo": "",
+    "name": "Area Detection",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 9,
+    "initialValue": 0,
+    "memo": "",
+    "name": "X Coordinate Position",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 10,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Y Coordinate Position",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 37,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Display Direction",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 32,
+    "initialValue": 100,
+    "memo": "",
+    "name": "Scale X (%)",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 33,
+    "initialValue": 100,
+    "memo": "",
+    "name": "Scale Y (%)",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 11,
+    "initialValue": 0,
+    "memo": "",
+    "name": "X Direction Speed",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 12,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Y Direction Speed",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 23,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Horizontal Movement",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 24,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Vertical Movement",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 25,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Horizontal Acceleration",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 26,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Vertical Acceleration",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 27,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Horizontal Max Movement",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 28,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Vertical Max Movement",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 29,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Horizontal Deceleration",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 30,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Vertical Deceleration",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 35,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Initial Jump Speed",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 13,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Player Detection",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 22,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Controller ID",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 14,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Received Damage Amount",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 17,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Time of Invincibility",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 18,
+    "initialValue": -1,
+    "memo": "",
+    "name": "Animation frame",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 19,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Instance ID",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 21,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Single Unit Instance ID",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 20,
+    "initialValue": 0,
+    "memo": "",
+    "name": "No. of Same Instances Placed in Scene",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 31,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Duration to take over accelerated speed",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 34,
+    "initialValue": 0,
+    "memo": "",
+    "name": "Display Priority",
+    "toBeSaved": true
+}
+,
+					{
+    "folder": false,
+    "id": 38,
+    "initialValue": -1,
+    "memo": "",
+    "name": "Parent Object Instance ID",
+    "toBeSaved": true
+}
+
+					],
+					"switchList": [
+							{
+			"id": 1,
+			"name": "Invincibility",
+			"initialValue": false,
+			"toBeSaved": true,
+			"memo": "",
+			"folder": false
+		},
+							{
+			"id": 2,
+			"name": "Free Movement",
+			"initialValue": false,
+			"toBeSaved": true,
+			"memo": "",
+			"folder": false
+		},
+							{
+			"id": 3,
+			"name": "Lock Target",
+			"initialValue": false,
+			"toBeSaved": true,
+			"memo": "",
+			"folder": false
+		},
+							{
+			"id": 4,
+			"name": "Portal Touched",
+			"initialValue": false,
+			"toBeSaved": true,
+			"memo": "",
+			"folder": false
+		},
+							{
+			"id": 5,
+			"name": "Critical Received",
+			"initialValue": false,
+			"toBeSaved": true,
+			"memo": "",
+			"folder": false
+		},
+							{
+			"id": 6,
+			"name": "Disable",
+			"initialValue": false,
+			"toBeSaved": true,
+			"memo": "",
+			"folder": false
+		},
+							{
+			"id": 7,
+			"name": "SlipOnSlope",
+			"initialValue": false,
+			"toBeSaved": true,
+			"memo": "",
+			"folder": false
+		},
+							{
+			"id": 8,
+			"name": "AffectOtherPhysics",
+			"initialValue": false,
+			"toBeSaved": true,
+			"memo": "",
+			"folder": false
+		},
+							{
+			"id": 9,
+			"name": "AffectedByOtherPhysics",
+			"initialValue": false,
+			"toBeSaved": true,
+			"memo": "",
+			"folder": false
+		},
+							{
+			"id": 10,
+			"name": "FollowConnectedPhysics",
+			"initialValue": false,
+			"toBeSaved": true,
+			"memo": "",
+			"folder": false
+		},
+							{
+			"id": 11,
+			"name": "Display Afterimage",
+			"initialValue": false,
+			"toBeSaved": true,
+			"memo": "",
+			"folder": false
+		}
+					],
+			"databaseSettingFlag": false,
+			"databaseId": 0,
+					"physicsPartList": [
+					
+					],
+					"priorityInPhysics": 0
+,
+			"folder": false
 		}
 	],
 	"animationList": [
@@ -1326,21 +2017,7 @@
 					"srcFilename": "D:/agogpixel/pgmmv-extended-show-choices-plugin-demo/assets/runtime-logger-plugin-0.3.0.pgmmv.js",
 					"enabled": true,
 					"internalJson": {},
-					"paramValueJson": [
-    {
-        "id": 1,
-        "value": 0
-    },
-    {
-        "id": 4,
-        "value": 2
-    },
-    {
-        "id": 3,
-        "value": 1
-    }
-]
-,
+					"paramValueJson": [{"id":1,"value":0},{"id":4,"value":2},{"id":3,"value":1}],
 					"officialKey": "",
 			"folder": false
 				},
@@ -1351,17 +2028,7 @@
 					"srcFilename": "D:/agogpixel/pgmmv-extended-show-choices-plugin-demo/assets/pgmmv-extended-show-choices-plugin-0.0.0-dev.pgmmv.js",
 					"enabled": true,
 					"internalJson": {},
-					"paramValueJson": [
-    {
-        "id": 6,
-        "value": 2
-    },
-    {
-        "id": 5,
-        "value": "0,255,255,128"
-    }
-]
-,
+					"paramValueJson": [{"id":6,"value":2},{"id":5,"value":"255,165,0,128"},{"id":1,"value":1},{"id":7,"value":2},{"id":8,"value":2}],
 					"officialKey": "",
 			"folder": false
 				}
